# VoIP

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
frontend/desktop/: README.md  main.js  package.json  preload.js
frontend/mobile/: App.tsx  README.md  app.json  package.json  tsconfig.json
frontend/web/: README.md  middleware.ts  next.config.mjs  next.config.ts  package.json  tsconfig.json
frontend/web/src/app/: layout.tsx  page.tsx
frontend/web/src/app/(protected)/: layout.tsx
frontend/web/src/components/layout/: AppShell.tsx
frontend/web/src/hooks/: useApi.ts  useSession.tsx
frontend/web/src/store/: softphone.ts
frontend/web/src/types/: auth.ts
infra/helm/voip-platform/: Chart.yaml  values.yaml
infra/helm/voip-platform/templates/: _helpers.tpl  deployments.yaml
infra/k8s/: README.md
infra/terraform/: dbs.tf  main.tf  providers.tf  variables.tf
infra/terraform/modules/postgres/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/redis/: main.tf  outputs.tf  variables.tf
services/api/: Cargo.toml  Dockerfile
services/api/migrations/: 0001_create_metrics_overview.sql
services/api/src/: main.rs
services/media/: Cargo.toml  Dockerfile
services/media/src/: main.rs
services/pbx/: Cargo.toml  Dockerfile
services/pbx/migrations/: 001_init.sql
services/pbx/src/: main.rs
services/signaling/: Cargo.toml  Dockerfile
services/signaling/src/: main.rs
shared/dto/: Cargo.toml
shared/dto/src/: lib.rs
shared/models/: Cargo.toml
shared/models/src/: lib.rs
shared/protobuf/: README.md
(+18 files in other folders)
