[workspace]
members = [
    "services/*",
    "shared/dto",
    "shared/models",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["VoIP Platform Team"]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
jsonwebtoken = "9"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["std", "clock"] }


